src/tests/fixtures/extend_type/defaultExport.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class SomeType {
  // No fields
}

/** @gqlField */
export default function greeting(_: Query): string {
  return `Hello World`;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/defaultExport.invalid.ts:7:8 - error: Expected a `@gqlField` function to be a named export, not a default export. Grats needs to import resolver functions into it's generated schema module, so the resolver function must be a named export.

7 export default function greeting(_: Query): string {
         ~~~~~~~
